--- a/app/views/layouts/blogine/application.html.erb
+++ b/app/views/layouts/blogine/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Blogine</title>
-  <%= stylesheet_link_tag    "blogine/application", media: "all" %>
-  <%= javascript_include_tag "blogine/application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Blogine</title>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body id='blog'>
 
-<%= yield %>
+    <%= yield %>
 
-</body>
+  </body>
 </html>
