--- a/app/views/layouts/blogine/application.html.erb
+++ b/app/views/layouts/blogine/application.html.erb
@@ -12,33 +12,12 @@
   </head>
 
   <body id='blogine'>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">Blogine</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Articles</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Categories</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            <%= link_to "<< Back to blog", '' %>
-          </span>
-        </div>
-      </div>
-    </nav>
+    <%= render 'admins_topbar' if admins_page? %>
 
     <div class="container">
-      <%= render "flash_content" %>
+      <%#= render "flash_content" %>
 
       <%= yield %>
     </div>
-
   </body>
 </html>
