Added CRUD for articles

--- a/app/views/layouts/blogine/application.html.erb
+++ b/app/views/layouts/blogine/application.html.erb
@@ -14,8 +14,9 @@
   <body id='blogine'>
     <%= render 'admins_topbar' if admins_page? %>
 
-    <div class="container">
+    <div id='main-content' class="container">
       <%#= render "flash_content" %>
+      <%= render 'admins_navbar' if admins_page? %>
 
       <%= yield %>
     </div>
