--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -1,5 +1,19 @@
 body#blogine {
-  nav#admins-topbar {
-    margin-bottom: 10px;
+  background-color: #f8f9fa !important;
+
+  #admins-topbar, #admins-navbar {
+    margin-bottom: 15px;
+  }
+
+  #main-content {
+    background-color: #fff;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 0 6px 0 rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.2);
+    box-shadow: 0 0 6px 0 rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.2);
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 100%;
+    flex: 1 1 100%;
+    padding-bottom: 10vh;
+    padding-top: 3vh;
   }
 }
