--- a/app/views/blogine/application/_admins_topbar.html.erb
+++ b/app/views/blogine/application/_admins_topbar.html.erb
@@ -1,23 +1,9 @@
-<nav id='admins-topbar' class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id='admins-topbar' class="navbar navbar-expand-lg  navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Blogine</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="#"><strong>Blogine</strong></a>
 
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Articles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Categories</a>
-        </li>
-      </ul>
-
-      <span class="navbar-text">
-        <%= link_to "<< Back to blog", root_path %>
-      </span>
-    </div>
+    <span class="navbar-text">
+      <%= link_to "<< Back to blog", root_path %>
+    </span>
   </div>
 </nav>
