Added CRUD for category

--- a/app/views/blogine/application/_admins_navbar.html.erb
+++ b/app/views/blogine/application/_admins_navbar.html.erb
@@ -1,8 +1,8 @@
 <ul id='admins-navbar' class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Articles</a>
+    <%= link_to "Articles", admins_articles_path, class: 'nav-link active' %>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Categories</a>
+    <%= link_to "Categories", admins_categories_path, class: 'nav-link' %>
   </li>
 </ul>
