--- a/app/views/blogine/admins/categories/edit.html.erb
+++ b/app/views/blogine/admins/categories/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'breadcrumbs', navs: {'Articles' => admins_articles_path, 'Edit Article' => nil} %>
+<%= render 'breadcrumbs', navs: {'Categoried' => admins_categories_path, 'Edit Category' => nil} %>
 
 <%= render "form" %>
