--- a/app/views/blogine/application/_admins_navbar.html.erb
+++ b/app/views/blogine/application/_admins_navbar.html.erb
@@ -1,8 +1,8 @@
 <ul id='admins-navbar' class="nav nav-tabs">
   <li class="nav-item">
-    <%= link_to "Articles", admins_articles_path, class: 'nav-link active' %>
+    <%= link_to "Articles", admins_articles_path, class: "nav-link #{"active" if selected_tab?(:articles)}" %>
   </li>
   <li class="nav-item">
-    <%= link_to "Categories", admins_categories_path, class: 'nav-link' %>
+    <%= link_to "Categories", admins_categories_path, class: "nav-link #{"active" if selected_tab?(:categories)}" %>
   </li>
 </ul>
