--- a/app/views/blogine/admins/articles/_form.html.erb
+++ b/app/views/blogine/admins/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for([:admins, @article], html: { class: 'form-horizontal' }) do |f| %>
   <%= f.input :title %>
   <%= f.association :category %>
-  <%= f.input :date, as: :string %>
+  <%= f.input :date, as: :string, input_html: { class: 'date-selector', data: { 'date-format' => 'yyyy-mm-dd' } } %>
   <%= f.input :content %>
 
   <%= f.submit class: 'btn btn-primary' %>
