Adjusted the admin views

--- a/app/views/blogine/admins/articles/_form.html.erb
+++ b/app/views/blogine/admins/articles/_form.html.erb
@@ -1,8 +1,15 @@
 <%= simple_form_for([:admins, @article], html: { class: 'form-horizontal' }) do |f| %>
+   <div class="row">
+    <div class="col">
+      <%= f.association :category, prompt: "< Choose a Category >" %>
+    </div>
+    <div class="col">
+      <%= f.input :date, as: :string, input_html: { class: 'date-selector', data: { 'date-format' => 'yyyy-mm-dd' } } %>
+    </div>
+  </div>
+
   <%= f.input :title %>
-  <%= f.association :category %>
-  <%= f.input :date, as: :string, input_html: { class: 'date-selector', data: { 'date-format' => 'yyyy-mm-dd' } } %>
-  <%= f.input :content %>
+  <%= f.input :content, input_html: { rows: 20 } %>
 
   <%= f.submit class: 'btn btn-primary' %>
   <%= link_to "Back", :back, class: 'btn btn-outline-secondary' %>
