Added the home page

--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -15,5 +15,22 @@ body#blogine {
     flex: 1 1 100%;
     padding-bottom: 10vh;
     padding-top: 3vh;
+
+    min-height:600px;
+    height:auto!important;
+    height:600px;
+  }
+
+  #home-page {
+    padding: 25px;
+
+    #left-side {
+      padding: 0 30px;
+      #last-article {
+        hr {
+          margin: 8px 0;
+        }
+      }
+    }
   }
 }
