--- a/app/views/blogine/application/_admins_topbar.html.erb
+++ b/app/views/blogine/application/_admins_topbar.html.erb
@@ -1,6 +1,6 @@
 <nav id='admins-topbar' class="navbar navbar-expand-lg  navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#"><strong>Blogine</strong></a>
+    <a class="navbar-brand" href="<%= admins_root_path %>"><strong>Blogine</strong></a>
 
     <span class="navbar-text">
       <%= link_to "<< Back to blog", root_path %>
