Added slug to category

--- a/app/views/blogine/admins/categories/_form.html.erb
+++ b/app/views/blogine/admins/categories/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for([:admins, @category], html: { class: 'form-horizontal' }) do |f| %>
   <%= f.input :name %>
+  <%= f.input :slug %>
 
   <%= f.submit class: 'btn btn-primary' %>
   <%= link_to "Back", :back, class: 'btn btn-outline-secondary' %>
