--- a/app/views/blogine/admins/articles/_form.html.erb
+++ b/app/views/blogine/admins/articles/_form.html.erb
@@ -4,7 +4,7 @@
       <%= f.association :category, prompt: "< Choose a Category >" %>
     </div>
     <div class="col">
-      <%= f.input :date, as: :string, input_html: { class: 'date-selector', data: { 'date-format' => 'yyyy-mm-dd' } } %>
+      <%= f.input :release_date, as: :string, input_html: { class: 'date-selector', data: { 'date-format' => 'yyyy-mm-dd' } } %>
     </div>
   </div>
 
