--- a/app/views/blogine/public/category.html.erb
+++ b/app/views/blogine/public/category.html.erb
@@ -1,4 +1,4 @@
-<div id='home-page' class="row">
+<div class="public-pages row">
   <div id='left-side' class="col-sm-8">
     <p class="alert alert-info" role="alert">
       <%= @category %>: <%= @articles.count %> <%= "article".pluralize(@articles.count) %> in total
@@ -6,11 +6,11 @@
 
     <% @articles.group_by { |a| a.release_date.year }.each do |year, articles| %>
       <h4><%= year %></h4>
-      <% articles.each do |article| %>
-        <ul>
-          <li><%= link_to article.title, '' %> (<%= l article.release_date %>)</li>
-        </ul>
-      <% end %>
+      <ul>
+        <% articles.each do |article| %>
+          <li><%= link_to article.title, article_path(article.slug) %> (<%= l article.release_date %>)</li>
+        <% end %>
+      </ul>
       <hr />
     <% end %>
   </div>
