--- a/app/views/blogine/public/home_page.html.erb
+++ b/app/views/blogine/public/home_page.html.erb
@@ -1,4 +1,4 @@
-<div id='home-page' class="row">
+<div class="public-pages row">
   <div id='left-side' class="col-sm-8">
     <% if @last_article %>
       <h4>
@@ -12,7 +12,7 @@
       <p>
         <%= truncate @last_article.content, length: 100 %>
       </p>
-      <a href="#">Read More »</a>
+      <%= link_to "Read More »", article_path(@last_article.slug) %>
       <hr />
       <br />
     <% end %>
