--- a/app/views/blogine/public/article.html.erb
+++ b/app/views/blogine/public/article.html.erb
@@ -1,10 +1,14 @@
 <div class="public-pages">
-  <div class="alert alert-secondary" role="alert">
-    <span class="font-weight-light">Category: <%= link_to @category, category_path(slug: @category.slug) %></span>
-  </div>
-  <h2><%= @article.title %></h2>
-  <hr />
-  <p class="font-weight-light">Date: <%= l @article.release_date %></p>
+  <div class='row'>
+    <div class="col-sm-12">
+      <div class="alert alert-secondary" role="alert">
+        <span class="font-weight-light">Category: <%= link_to @category, category_path(slug: @category.slug) %></span>
+      </div>
+      <h2><%= @article.title %></h2>
+      <p class="font-weight-light">Date: <%= l @article.release_date %></p>
+      <hr />
 
-  <%= simple_format @article.content %>
+      <%= render_markdown(@article.content) %>
+    </div>
+  </div>
 </div>
