--- a/app/views/blogine/public/home_page.html.erb
+++ b/app/views/blogine/public/home_page.html.erb
@@ -22,7 +22,7 @@
     <ul>
       <% @recent_articles.each_with_index do |article, index| %>
         <% next if index == 0 %>
-        <li><%= l article.release_date %>: <%= link_to article.title, '' %></li>
+        <li><%= link_to article.title, article_path(article.slug) %> (<%= l article.release_date %>)</li>
       <% end %>
     </ul>
   </div>
