Added admins layout, adjust the style for pages

--- a/app/views/blogine/application/_topbar.html.erb
+++ b/app/views/blogine/application/_topbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav id='topbar' class="navbar navbar-light bg-light">
   <div class='container'>
     <a class="navbar-brand" href="<%= root_path %>">My Personal Weblog</a>
   </div>
