--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -1,11 +1,41 @@
 body#blogine {
-  background-color: #f8f9fa !important;
+  // background-color: #f8f9fa !important;
+  background: #f5f5f5;
+
+  #topbar {
+    background-image: linear-gradient(0deg, #f5f5f5 0%, #dadada 100%);
+    background-position: 50%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    position: relative;
+    z-index: 2;
+  }
 
   #admins-topbar, #admins-navbar {
     margin-bottom: 15px;
   }
 
-  #main-content {
+  #main {
+    padding: 3rem;
+    article {
+      background: #fff;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 5rem 7rem;
+      border: 1px solid #c0c0c0;
+      h1 {
+        font-size: 3rem;
+        text-align: center;
+      }
+      .timestamp {
+        text-align: right;
+        padding-bottom: 2rem;
+        color: #555;
+      }
+    }
+  }
+
+  #admins-main {
     background-color: #fff;
     border-radius: 4px;
     -webkit-box-shadow: 0 0 6px 0 rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.2);
