--- a/app/views/blogine/public/article.html.erb
+++ b/app/views/blogine/public/article.html.erb
@@ -1,14 +1,13 @@
-<div class="public-pages">
+<article>
   <div class='row'>
     <div class="col-sm-12">
-      <div class="alert alert-secondary" role="alert">
-        <span class="font-weight-light">Category: <%= link_to @category, category_path(slug: @category.slug) %></span>
-      </div>
-      <h2><%= @article.title %></h2>
-      <p class="font-weight-light">Date: <%= l @article.release_date %></p>
+      <%= link_to "«  #{@category} Index", category_path(slug: @category.slug), class: 'float-left' %>
+      <div class="timestamp">Date: <%= l @article.release_date %></div>
+
+      <h1><%= @article.title %></h1>
       <hr />
 
       <%= render_markdown(@article.content) %>
     </div>
   </div>
-</div>
+</article>
