Improved the styles

--- a/app/views/blogine/application/_topbar.html.erb
+++ b/app/views/blogine/application/_topbar.html.erb
@@ -1,5 +1,3 @@
-<nav id='topbar' class="navbar navbar-light bg-light">
-  <div class='container'>
-    <a class="navbar-brand" href="<%= root_path %>">My Personal Weblog</a>
-  </div>
+<nav id='topbar'>
+  <a id="topbar-brand" href="<%= root_path %>">My Personal Weblog</a>
 </nav>
