--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -5,10 +5,18 @@ body#blogine {
   #topbar {
     background-image: linear-gradient(0deg, #f5f5f5 0%, #dadada 100%);
     background-position: 50%;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
     position: relative;
     z-index: 2;
+    text-align: center;
+    #topbar-brand {
+      font-weight: bold;
+      text-align: center;
+      font-size: 1.5rem;
+      color: #555;
+      text-decoration: none;
+    }
   }
 
   #admins-topbar, #admins-navbar {
@@ -16,21 +24,28 @@ body#blogine {
   }
 
   #main {
-    padding: 3rem;
+    padding: 1.5rem;
     article {
       background: #fff;
       max-width: 900px;
       margin: 0 auto;
       padding: 5rem 7rem;
       border: 1px solid #c0c0c0;
-      h1 {
-        font-size: 3rem;
+      h2.title {
         text-align: center;
+        margin-bottom: 2rem;
       }
       .timestamp {
         text-align: right;
         padding-bottom: 2rem;
         color: #555;
+      }
+      #category {
+        text-align: center;
+        max-width: 500px;
+        margin: 1rem auto 3rem;
+        font-size: 20px;
+        font-weight: 300;
       }
     }
   }
