Improved the styles for article page

--- a/app/views/blogine/application/_topbar.html.erb
+++ b/app/views/blogine/application/_topbar.html.erb
@@ -1,3 +1,12 @@
-<nav id='topbar'>
-  <a id="topbar-brand" href="<%= root_path %>">My Personal Weblog</a>
-</nav>
+<header id='topbar'>
+  <div class='container'>
+    <div class='left-links'>
+      <a id="topbar-brand" href="<%= root_path %>">Blogine</a>
+    </div>
+
+    <nav class='right-links'>
+      <a href="https://github.com/zernel">Github</a>
+      <a href="">Linkedin</a>
+    </nav>
+  </div>
+</header>
