--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -2,20 +2,40 @@ body#blogine {
   // background-color: #f8f9fa !important;
   background: #f5f5f5;
 
-  #topbar {
+  header#topbar {
     background-image: linear-gradient(0deg, #f5f5f5 0%, #dadada 100%);
     background-position: 50%;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     position: relative;
     z-index: 2;
-    text-align: center;
-    #topbar-brand {
-      font-weight: bold;
-      text-align: center;
-      font-size: 1.5rem;
-      color: #555;
-      text-decoration: none;
+
+    .container {
+      display: flex;
+      justify-content: space-between;
+
+      max-width: 960px;
+      .left-links {
+        width: 200px;
+        #topbar-brand {
+          font-weight: bold;
+          text-align: center;
+          font-size: 1.5rem;
+          color: #555;
+          text-decoration: none;
+        }
+      }
+      .right-links {
+        text-align: right;
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+        margin-top: .7rem;
+        a {
+          color: #000;
+          text-decoration: none;
+          margin: 0 .75em;
+        }
+      }
     }
   }
 
