updated the styles for category and home page

--- a/app/views/blogine/application/_topbar.html.erb
+++ b/app/views/blogine/application/_topbar.html.erb
@@ -5,8 +5,8 @@
     </div>
 
     <nav class='right-links'>
-      <a href="https://github.com/zernel">Github</a>
-      <a href="">Linkedin</a>
+      <a href="#" target="_blank">Github</a>
+      <a href="#" target="_blank">Linkedin</a>
     </nav>
   </div>
 </header>
