--- a/app/views/blogine/public/article.html.erb
+++ b/app/views/blogine/public/article.html.erb
@@ -8,5 +8,7 @@
 
   <h2 class='title'><%= @article.title %></h2>
 
-  <%= render_markdown(@article.content) %>
+  <div>
+    <%= render_markdown(@article.content) %>
+  </div>
 </article>
