--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -2,7 +2,7 @@ body#blogine {
   // background-color: #f8f9fa !important;
   background: #f5f5f5;
 
-  header#topbar {
+  #topbar {
     background-image: linear-gradient(0deg, #f5f5f5 0%, #dadada 100%);
     background-position: 50%;
     padding-top: 1.5rem;
@@ -39,10 +39,6 @@ body#blogine {
     }
   }
 
-  #admins-topbar, #admins-navbar {
-    margin-bottom: 15px;
-  }
-
   #main {
     padding: 1.5rem;
     article {
@@ -68,6 +64,18 @@ body#blogine {
         font-weight: 300;
       }
     }
+
+    .home-content, .category-content {
+      background: #fff;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem;
+      border: 1px solid #c0c0c0;
+    }
+  }
+
+  #admins-topbar, #admins-navbar {
+    margin-bottom: 15px;
   }
 
   #admins-main {
@@ -85,17 +93,5 @@ body#blogine {
     min-height:600px;
     height:auto!important;
     height:600px;
-  }
-
-  .public-pages {
-    padding: 0 20px;
-
-    #left-side {
-      #last-article {
-        hr {
-          margin: 8px 0;
-        }
-      }
-    }
   }
 }
