--- a/app/views/blogine/public/category.html.erb
+++ b/app/views/blogine/public/category.html.erb
@@ -1,21 +1,14 @@
-<div class="public-pages row">
-  <div id='left-side' class="col-sm-8">
-    <p class="alert alert-info" role="alert">
-      <%= @category %>: <%= @articles.count %> <%= "article".pluralize(@articles.count) %> in total
-    </p>
+<div class='category-content'>
+  <h3 class='text-center'><%= @category %></h3>
+  <p class='text-center'><small><%= @articles.count %> <%= "article".pluralize(@articles.count) %> in total</small></p>
 
-    <% @articles.group_by { |a| a.release_date.year }.each do |year, articles| %>
-      <h4><%= year %></h4>
-      <ul>
-        <% articles.each do |article| %>
-          <li><%= link_to article.title, article_path(article.slug) %> (<%= l article.release_date %>)</li>
-        <% end %>
-      </ul>
-      <hr />
-    <% end %>
-  </div>
-
-  <div class="col-sm-4">
-    <%= render 'category_sidebar' %>
-  </div>
+  <% @articles.group_by { |a| a.release_date.year }.each do |year, articles| %>
+    <hr />
+    <h4><%= year %></h4>
+    <ul>
+      <% articles.each do |article| %>
+        <li><%= link_to article.title, article_path(article.slug) %> (<%= l article.release_date %>)</li>
+      <% end %>
+    </ul>
+  <% end %>
 </div>
