Adjusted header and added footer

--- a/app/views/blogine/application/_header.html.erb
+++ b/app/views/blogine/application/_header.html.erb
@@ -1,4 +1,4 @@
-<header id='topbar'>
+<header>
   <div class='container'>
     <div class='left-links'>
       <a id="topbar-brand" href="<%= root_path %>">Blogine</a>
