--- a/app/views/layouts/blogine/application.html.erb
+++ b/app/views/layouts/blogine/application.html.erb
@@ -12,10 +12,12 @@
   </head>
 
   <body id='blogine'>
-    <%= render 'topbar' %>
+    <%= render 'header' %>
 
     <div id='main'>
       <%= yield %>
     </div>
+
+    <%= render 'footer' %>
   </body>
 </html>
