--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -2,7 +2,7 @@ body#blogine {
   // background-color: #f8f9fa !important;
   background: #f5f5f5;
 
-  #topbar {
+  header {
     background-image: linear-gradient(0deg, #f5f5f5 0%, #dadada 100%);
     background-position: 50%;
     padding-top: 1.5rem;
@@ -36,6 +36,25 @@ body#blogine {
           margin: 0 .75em;
         }
       }
+    }
+  }
+
+  footer {
+    text-align: center;
+    background-color: #F0F0F0;
+    line-height: 2rem;
+    border-top: none;
+    color: #777;
+    a {
+      color: #777;
+      text-decoration: none;
+    }
+    &.fixed-bottom {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1030;
     }
   }
 
