fixed the footer style to make sure it won't cover the main content

--- a/app/assets/stylesheets/blogine/themes/default.scss
+++ b/app/assets/stylesheets/blogine/themes/default.scss
@@ -59,7 +59,8 @@ body#blogine {
   }
 
   #main {
-    padding: 1.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 3rem;
     article {
       background: #fff;
       max-width: 900px;
